Remove ITimeSystem project and integrate ITimeSystem.h into TimeSystem
The ITimeSystem project has been deleted and its main header file, ITimeSystem.h, integrated directly into the TimeSystem project. This was done by moving ITimeSystem.h to a new Interfaces directory within the TimeSystem project, refactoring the references in the TimeSystem project files. This results in a leaner project structure.

--- a/TimeSystem/TimeSystem.vcxproj
+++ b/TimeSystem/TimeSystem.vcxproj
@@ -19,13 +19,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ITimeSystem\ITimeSystem.vcxproj">
-      <Project>{e90bd8e9-be58-4c89-b793-d8a267eca347}</Project>
-      <Name>ITimeSystem</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Framework.h" />
+    <ClInclude Include="Interfaces\ITimeSystem.h" />
     <ClInclude Include="MultimediaClock\MultimediaClock.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="QueryClock\QueryClock.h" />
