Refactor code to improve modularity and error handling
This commit refactors multiple parts of the code to enhance its modularity and improve error handling. Methods that were previously attached to constructor and destructor in several classes (`Window`, `D2DRenderer`, etc.) are now handled in separate methods, which makes the code easier to read and manage. Additionally, more comprehensive logging has been implemented to help trace system operation and debug potential issues. New headers have also been added to the precompiled headers file, 'pch.h'. The `Factory`, `ImagingFactory`, `Converter`, etc. classes have been introduced to separate responsibilities and make the codebase modular.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -21,18 +21,34 @@
   <ItemGroup>
     <ClInclude Include="Framework.h" />
     <ClInclude Include="GameApp.h" />
+    <ClInclude Include="Math\Matrix.h" />
+    <ClInclude Include="Math\Vector.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Renderer\Converter.h" />
     <ClInclude Include="Renderer\D2DRenderer.h" />
+    <ClInclude Include="Renderer\Decoder.h" />
+    <ClInclude Include="Renderer\Factory.h" />
+    <ClInclude Include="Renderer\Frame.h" />
+    <ClInclude Include="Renderer\ImagingFactory.h" />
+    <ClInclude Include="Renderer\RenderTarget.h" />
     <ClInclude Include="TargetVersion.h" />
     <ClInclude Include="Time\Time.h" />
     <ClInclude Include="Window\Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameApp.cpp" />
+    <ClCompile Include="Math\Matrix.cpp" />
+    <ClCompile Include="Math\Vector.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Renderer\Converter.cpp" />
     <ClCompile Include="Renderer\D2DRenderer.cpp" />
+    <ClCompile Include="Renderer\Decoder.cpp" />
+    <ClCompile Include="Renderer\Factory.cpp" />
+    <ClCompile Include="Renderer\Frame.cpp" />
+    <ClCompile Include="Renderer\ImagingFactory.cpp" />
+    <ClCompile Include="Renderer\RenderTarget.cpp" />
     <ClCompile Include="Time\Time.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
