Refactor Scene and BitmapScene classes, remove loader classes
These changes refactor the Scene and BitmapScene classes and remove the loader classes, BitmapLoader and ILoader, along with their relevant files. The BitmapScene class now handles bitmap loading internally. Also, the Scene class has been updated to include new constructors and enhanced with additional logging. Changes to both classes include the addition of ILogger references, improved methods for tracking transformations, and updated practices for handling resources.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -31,6 +31,8 @@
     <ClInclude Include="Renderer\Frame.h" />
     <ClInclude Include="Renderer\ImagingFactory.h" />
     <ClInclude Include="Renderer\RenderTarget.h" />
+    <ClInclude Include="Scene\BitmapScene.h" />
+    <ClInclude Include="Scene\Scene.h" />
     <ClInclude Include="TargetVersion.h" />
     <ClInclude Include="Time\Time.h" />
     <ClInclude Include="Window\Window.h" />
@@ -49,6 +51,8 @@
     <ClCompile Include="Renderer\Frame.cpp" />
     <ClCompile Include="Renderer\ImagingFactory.cpp" />
     <ClCompile Include="Renderer\RenderTarget.cpp" />
+    <ClCompile Include="Scene\BitmapScene.cpp" />
+    <ClCompile Include="Scene\Scene.cpp" />
     <ClCompile Include="Time\Time.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
