--- a/Logger/Logger.vcxproj
+++ b/Logger/Logger.vcxproj
@@ -337,6 +337,7 @@
     <ClInclude Include="ConsoleLogger\Unicode\ConsoleLevelLoggerUnicode.h" />
     <ClInclude Include="ConsoleLogger\Unicode\ConsoleLoggerUnicode.h" />
     <ClInclude Include="Framework.h" />
+    <ClInclude Include="Interfaces\ILogger.h" />
     <ClInclude Include="Interfaces\ILoggerMultibyte.h" />
     <ClInclude Include="Interfaces\ILoggerUnicode.h" />
     <ClInclude Include="LevelLogger.h" />
