Update logger usage and refactor classes
Replaced the conventional logger instances used in classes with a static Logger class. The commit also includes several refactors and updates in class methods. These updates involve changes in parameter types, function names, and conversion of some class level logging calls to use the new static logging system.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -19,8 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="COM\ID2D1Animation.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="GameApp.h" />
+    <ClInclude Include="Logger\Logger.h" />
+    <ClInclude Include="Math\Math.h" />
     <ClInclude Include="Math\Matrix.h" />
     <ClInclude Include="Math\Vector.h" />
     <ClInclude Include="pch.h" />
@@ -38,7 +41,9 @@
     <ClInclude Include="Window\Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="COM\ID2D1Animation.cpp" />
     <ClCompile Include="GameApp.cpp" />
+    <ClCompile Include="Logger\Logger.cpp" />
     <ClCompile Include="Math\Matrix.cpp" />
     <ClCompile Include="Math\Vector.cpp" />
     <ClCompile Include="pch.cpp">
@@ -92,7 +97,6 @@
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <ObjectFileName>x64\Debug\</ObjectFileName>
       <CallingConvention>Cdecl</CallingConvention>
-      <ProgramDataBaseFileName>D:\Dosuha\CPP\Direct2DLecture\x64\Debug\Engine.pdb</ProgramDataBaseFileName>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>x64\Debug\Engine.pch</PrecompiledHeaderOutputFile>
