--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -26,6 +26,12 @@
     <ClInclude Include="COM\COM.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="GameApp.h" />
+    <ClInclude Include="Input\Controller\Controller.h" />
+    <ClInclude Include="Input\Input.h" />
+    <ClInclude Include="Input\InputComponents\ButtonInputComponent.h" />
+    <ClInclude Include="Input\InputComponents\ValueInputComponent.h" />
+    <ClInclude Include="Input\Keyboad\Keyboard.h" />
+    <ClInclude Include="Input\Mouse\Mouse.h" />
     <ClInclude Include="Logger\Logger.h" />
     <ClInclude Include="Managers\COMManager.h" />
     <ClInclude Include="Managers\Managers.h" />
@@ -87,10 +93,8 @@
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <ObjectFileName>x64\Debug\</ObjectFileName>
       <CallingConvention>Cdecl</CallingConvention>
-      <ProgramDataBaseFileName>D:\Dosuha\CPP\Direct2DLecture\x64\Debug\Engine.pdb</ProgramDataBaseFileName>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <PrecompiledHeaderOutputFile>x64\Debug\Engine.pch</PrecompiledHeaderOutputFile>
       <PreprocessToFile>false</PreprocessToFile>
       <PreprocessKeepComments>false</PreprocessKeepComments>
       <PreprocessSuppressLineNumbers>false</PreprocessSuppressLineNumbers>
@@ -124,6 +128,12 @@
     </ClCompile>
     <ClCompile Include="COM\Animation\IDSHAnimationAsset.cpp" />
     <ClCompile Include="GameApp.cpp" />
+    <ClCompile Include="Input\Controller\Controller.cpp" />
+    <ClCompile Include="Input\Input.cpp" />
+    <ClCompile Include="Input\InputComponents\ButtonInputComponent.cpp" />
+    <ClCompile Include="Input\InputComponents\ValueInputComponent.cpp" />
+    <ClCompile Include="Input\Keyboad\Keyboard.cpp" />
+    <ClCompile Include="Input\Mouse\Mouse.cpp" />
     <ClCompile Include="Logger\Logger.cpp" />
     <ClCompile Include="Managers\COMManager.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
@@ -164,10 +174,8 @@
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <ObjectFileName>x64\Debug\</ObjectFileName>
       <CallingConvention>Cdecl</CallingConvention>
-      <ProgramDataBaseFileName>D:\Dosuha\CPP\Direct2DLecture\x64\Debug\Engine.pdb</ProgramDataBaseFileName>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <PrecompiledHeaderOutputFile>x64\Debug\Engine.pch</PrecompiledHeaderOutputFile>
       <PreprocessToFile>false</PreprocessToFile>
       <PreprocessKeepComments>false</PreprocessKeepComments>
       <PreprocessSuppressLineNumbers>false</PreprocessSuppressLineNumbers>
@@ -205,6 +213,7 @@
     <ClCompile Include="Math\Vector.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Renderer\D2DRenderer.cpp" />
     <ClCompile Include="Scenes\AnimationScene.cpp" />
@@ -251,7 +260,6 @@
       <CallingConvention>Cdecl</CallingConvention>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <PrecompiledHeaderOutputFile>x64\Debug\Engine.pch</PrecompiledHeaderOutputFile>
       <PreprocessToFile>false</PreprocessToFile>
       <PreprocessKeepComments>false</PreprocessKeepComments>
       <PreprocessSuppressLineNumbers>false</PreprocessSuppressLineNumbers>
@@ -298,6 +306,9 @@
       <Project>{5fdd9b02-0020-4afc-8d49-5da479a6d4d5}</Project>
       <Name>TimeSystem</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="TODO.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -396,7 +407,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>d2d1.lib;dwrite.lib;</AdditionalDependencies>
+      <AdditionalDependencies>d2d1.lib;dwrite.lib;dxgi.lib;</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -420,7 +431,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
