--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -156,6 +156,8 @@
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="ClientApp.cpp" />
+    <ClCompile Include="GameObjects\Monster.cpp" />
+    <ClCompile Include="GameObjects\Player.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
@@ -164,6 +166,8 @@
   <ItemGroup>
     <ClInclude Include="ClientApp.h" />
     <ClInclude Include="Framework.h" />
+    <ClInclude Include="GameObjects\Monster.h" />
+    <ClInclude Include="GameObjects\Player.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="TargetVersion.h" />
   </ItemGroup>
