--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -19,6 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera\Camera.h" />
+    <ClInclude Include="Component\Component.h" />
+    <ClInclude Include="Component\MovementComponent.h" />
     <ClInclude Include="COM\AnimationFactory\DSHAnimationFactory.h" />
     <ClInclude Include="COM\AnimationFactory\IDSHAnimationFactory.h" />
     <ClInclude Include="COM\Animation\DSHAnimationAsset.h" />
@@ -26,6 +29,7 @@
     <ClInclude Include="COM\COM.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="GameApp.h" />
+    <ClInclude Include="GameObject\GameObject.h" />
     <ClInclude Include="Input\Controller\Controller.h" />
     <ClInclude Include="Input\Input.h" />
     <ClInclude Include="Input\InputComponents\ButtonInputComponent.h" />
@@ -33,9 +37,11 @@
     <ClInclude Include="Input\Keyboad\Keyboard.h" />
     <ClInclude Include="Input\Mouse\Mouse.h" />
     <ClInclude Include="Logger\Logger.h" />
+    <ClInclude Include="Managers\CameraManager.h" />
     <ClInclude Include="Managers\COMManager.h" />
     <ClInclude Include="Managers\Managers.h" />
     <ClInclude Include="Managers\ResourceManager.h" />
+    <ClInclude Include="Math\AABB.h" />
     <ClInclude Include="Math\Math.h" />
     <ClInclude Include="Math\Matrix.h" />
     <ClInclude Include="Math\Rect.h" />
@@ -46,12 +52,21 @@
     <ClInclude Include="Renderer\D2DRenderer.h" />
     <ClInclude Include="Scenes\AnimationScene.h" />
     <ClInclude Include="Scenes\BitmapScene.h" />
+    <ClInclude Include="Scenes\BoxScene.h" />
+    <ClInclude Include="Scenes\CameraScene.h" />
+    <ClInclude Include="Scenes\EmptyBoxScene.h" />
+    <ClInclude Include="Scenes\FillBoxScene.h" />
     <ClInclude Include="Scenes\Scene.h" />
+    <ClInclude Include="Scenes\TextScene.h" />
     <ClInclude Include="TargetVersion.h" />
     <ClInclude Include="Time\Time.h" />
     <ClInclude Include="Window\Window.h" />
+    <ClInclude Include="World\World.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Camera\Camera.cpp" />
+    <ClCompile Include="Component\Component.cpp" />
+    <ClCompile Include="Component\MovementComponent.cpp" />
     <ClCompile Include="COM\AnimationFactory\DSHAnimationFactory.cpp" />
     <ClCompile Include="COM\AnimationFactory\IDSHAnimationFactory.cpp" />
     <ClCompile Include="COM\Animation\DSHAnimationAsset.cpp">
@@ -128,6 +143,7 @@
     </ClCompile>
     <ClCompile Include="COM\Animation\IDSHAnimationAsset.cpp" />
     <ClCompile Include="GameApp.cpp" />
+    <ClCompile Include="GameObject\GameObject.cpp" />
     <ClCompile Include="Input\Controller\Controller.cpp" />
     <ClCompile Include="Input\Input.cpp" />
     <ClCompile Include="Input\InputComponents\ButtonInputComponent.cpp" />
@@ -135,6 +151,7 @@
     <ClCompile Include="Input\Keyboad\Keyboard.cpp" />
     <ClCompile Include="Input\Mouse\Mouse.cpp" />
     <ClCompile Include="Logger\Logger.cpp" />
+    <ClCompile Include="Managers\CameraManager.cpp" />
     <ClCompile Include="Managers\COMManager.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -208,6 +225,7 @@
       <LibCompiled>true</LibCompiled>
     </ClCompile>
     <ClCompile Include="Managers\ResourceManager.cpp" />
+    <ClCompile Include="Math\AABB.cpp" />
     <ClCompile Include="Math\Matrix.cpp" />
     <ClCompile Include="Math\Rect.cpp" />
     <ClCompile Include="Math\Vector.cpp" />
@@ -218,7 +236,12 @@
     <ClCompile Include="Renderer\D2DRenderer.cpp" />
     <ClCompile Include="Scenes\AnimationScene.cpp" />
     <ClCompile Include="Scenes\BitmapScene.cpp" />
+    <ClCompile Include="Scenes\BoxScene.cpp" />
+    <ClCompile Include="Scenes\CameraScene.cpp" />
+    <ClCompile Include="Scenes\EmptyBoxScene.cpp" />
+    <ClCompile Include="Scenes\FillBoxScene.cpp" />
     <ClCompile Include="Scenes\Scene.cpp" />
+    <ClCompile Include="Scenes\TextScene.cpp" />
     <ClCompile Include="Time\Time.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -292,6 +315,7 @@
       <LibCompiled>true</LibCompiled>
     </ClCompile>
     <ClCompile Include="Window\Window.cpp" />
+    <ClCompile Include="World\World.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Exception\Exception.vcxproj">
