--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="Camera\Camera.h" />
     <ClInclude Include="Component\Component.h" />
     <ClInclude Include="Component\MovementComponent.h" />
+    <ClInclude Include="Component\SideViewMovementComponent.h" />
     <ClInclude Include="COM\AnimationFactory\DSHAnimationFactory.h" />
     <ClInclude Include="COM\AnimationFactory\IDSHAnimationFactory.h" />
     <ClInclude Include="COM\Animation\DSHAnimationAsset.h" />
@@ -56,8 +57,10 @@
     <ClInclude Include="Renderer\D2DRenderer.h" />
     <ClInclude Include="Scenes\AnimationScene.h" />
     <ClInclude Include="Scenes\BitmapScene.h" />
+    <ClInclude Include="Scenes\BoxColliderScene.h" />
     <ClInclude Include="Scenes\BoxScene.h" />
     <ClInclude Include="Scenes\CameraScene.h" />
+    <ClInclude Include="Scenes\ColliderScene.h" />
     <ClInclude Include="Scenes\EmptyBoxScene.h" />
     <ClInclude Include="Scenes\FillBoxScene.h" />
     <ClInclude Include="Scenes\Scene.h" />
@@ -71,6 +74,7 @@
     <ClCompile Include="Camera\Camera.cpp" />
     <ClCompile Include="Component\Component.cpp" />
     <ClCompile Include="Component\MovementComponent.cpp" />
+    <ClCompile Include="Component\SideViewMovementComponent.cpp" />
     <ClCompile Include="COM\AnimationFactory\DSHAnimationFactory.cpp" />
     <ClCompile Include="COM\AnimationFactory\IDSHAnimationFactory.cpp" />
     <ClCompile Include="COM\Animation\DSHAnimationAsset.cpp">
@@ -244,8 +248,10 @@
     <ClCompile Include="Renderer\D2DRenderer.cpp" />
     <ClCompile Include="Scenes\AnimationScene.cpp" />
     <ClCompile Include="Scenes\BitmapScene.cpp" />
+    <ClCompile Include="Scenes\BoxColliderScene.cpp" />
     <ClCompile Include="Scenes\BoxScene.cpp" />
     <ClCompile Include="Scenes\CameraScene.cpp" />
+    <ClCompile Include="Scenes\ColliderScene.cpp" />
     <ClCompile Include="Scenes\EmptyBoxScene.cpp" />
     <ClCompile Include="Scenes\FillBoxScene.cpp" />
     <ClCompile Include="Scenes\Scene.cpp" />
